assign1/tests/parsing/bad/global-expr.c
#include "FenneC.h"

int i = 2 + 2;

int main() {
  return 0;
}